# hc24-art-plotter-public

./: Makefile  README.md  pyproject.toml
archive/: plotter.py
src/: plotter.py  test.py
src/axidraw/: movements.py
src/generate/: Pipfile  README.md  generate.py
src/parsesvg/: parse.py
